tests/baselines/reference/es6ImportWithoutFromClause.errors.txt
es6ImportWithoutFromClause_1.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClause_0'.


==== es6ImportWithoutFromClause_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportWithoutFromClause_1.ts (1 errors) ====
    import "es6ImportWithoutFromClause_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClause_0'.
    